# ForensicKit

./: .gitignore  README.md  pyproject.toml  requirements.txt  scope.example.json
forensic_kit/: __init__.py
forensic_kit/analysis/: __init__.py  file_recovery.py  hash_verifier.py  metadata_extractor.py  stego_detector.py  timeline_builder.py
forensic_kit/collection/: __init__.py  disk_imager.py  log_collector.py  network_collector.py
forensic_kit/core/: __init__.py  audit_logger.py  evidence_chain.py  scope_manager.py
forensic_kit/reporting/: __init__.py  html_exporter.py  json_exporter.py  report_builder.py
forensic_kit/ui/: __init__.py  cli.py
tests/: test_audit_logger.py  test_disk_imager.py  test_evidence_chain.py  test_file_recovery.py  test_hash_verifier.py  test_log_collector.py  test_metadata_extractor.py  test_network_collector.py  test_report_builder.py  test_scope_manager.py  test_stego_detector.py  test_timeline_builder.py
