[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "forensic-kit"
version = "1.0.0"
description = "Herramienta de Análisis Forense Digital — Uso autorizado exclusivamente"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Shadow-King-Cyber"},
]
dependencies = [
    "click>=8.1",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
forensic-kit = "forensic_kit.ui.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
